# geehy_g32r430_tiny_board_eval

./: .gitignore  Cargo.toml  G32R4_Series_bak.yaml  README.md  eval_report.md  memory.x
.cargo/: config.toml
apmg32r430xx_pac/: Cargo.toml  apmg32r430xx.svd  device.x
apmg32r430xx_pac/src/: adc1.rs  adc3.rs  bakpr.rs  comp.rs  dac1.rs  dbgmcu.rs  dma.rs  eint.rs  fmc.rs  gpio.rs  i2c1.rs  iwdt.rs  lib.rs  lptmr.rs  pmu.rs  rcm.rs  rtc.rs  spi1.rs  tmr1.rs  tmr2.rs  ts.rs  usart1.rs  wwdt.rs
apmg32r430xx_pac/src/adc1/: awd2cr.rs  awd3cr.rs  cal.rs  cfgr.rs  cfgr2.rs  cr.rs  dr.rs  ier.rs  isr.rs  offset0.rs  offset1.rs  offset2.rs  offset3.rs  offset4.rs  offset5.rs  smpr1.rs  tr1.rs  tr2.rs  tr3.rs
apmg32r430xx_pac/src/adc3/: cfgr.rs  cr.rs  dr.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  joffset1.rs  joffset2.rs  joffset3.rs  joffset4.rs  jsqr.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  tr1.rs
apmg32r430xx_pac/src/bakpr/: dr0.rs  dr1.rs  dr10.rs  dr11.rs  dr12.rs  dr13.rs  dr14.rs  dr15.rs  dr2.rs  dr3.rs  dr4.rs  dr5.rs  dr6.rs  dr7.rs  dr8.rs  dr9.rs
apmg32r430xx_pac/src/comp/: c1csr.rs  c2csr.rs  c3csr.rs  c4csr.rs
apmg32r430xx_pac/src/dac1/: cr.rs  dhr10l.rs  dhr10r.rs  dor.rs  sr.rs  stmodr.rs  str.rs  swtrgr.rs
apmg32r430xx_pac/src/dbgmcu/: apb.rs  ctrl.rs  id.rs
apmg32r430xx_pac/src/dma/: fctrl0.rs  fctrl1.rs  fctrl2.rs  fctrl3.rs  (+48 more)
src/: board.rs  chip.rs  i2c.rs  lib.rs  main.rs  main_bkp.rs  spi.rs  uart.rs
src/hal/: adc.rs  clocks.rs  delay.rs  gpio.rs  i2c.rs  mod.rs  native.rs  prelude.rs  pwm.rs  spi.rs  tmr.rs  uart.rs
(+159 files in other folders)
